--- a/simple-ecommerce/Views/Home/Index.cshtml
+++ b/simple-ecommerce/Views/Home/Index.cshtml
@@ -145,23 +145,43 @@
                         <div class="paginatoin-area">
                             <div class="row">
                                 <div class="col-lg-6 col-md-6 pt-xs-15">
-                                    <p>Showing 1-12 of 13 item(s)</p>
+                                    <p>
+                                        Showing @((ViewBag.CurrentPage - 1) * ViewBag.PageSize + 1)-
+                                        @(Math.Min(ViewBag.CurrentPage * ViewBag.PageSize, ViewBag.TotalItems))
+                                        of @ViewBag.TotalItems item(s)
+                                    </p>
                                 </div>
                                 <div class="col-lg-6 col-md-6">
                                     <ul class="pagination-box pt-xs-20 pb-xs-15">
-                                        <li>
-                                            <a href="#" class="Previous"><i class="fa fa-chevron-left"></i> Previous</a>
-                                        </li>
-                                        <li class="active"><a href="#">1</a></li>
-                                        <li><a href="#">2</a></li>
-                                        <li><a href="#">3</a></li>
-                                        <li>
-                                            <a href="#" class="Next"> Next <i class="fa fa-chevron-right"></i></a>
-                                        </li>
+                                        @if (ViewBag.CurrentPage > 1)
+                                        {
+                                            <li>
+                                                <a href="@Url.Action("Index", new { page = ViewBag.CurrentPage - 1 })" class="Previous">
+                                                    <i class="fa fa-chevron-left"></i> Previous
+                                                </a>
+                                            </li>
+                                        }
+
+                                        @for (int i = 1; i <= ViewBag.TotalPages; i++)
+                                        {
+                                            <li class="@(i == ViewBag.CurrentPage ? "active" : "")">
+                                                <a href="@Url.Action("Index", new { page = i })">@i</a>
+                                            </li>
+                                        }
+
+                                        @if (ViewBag.CurrentPage < ViewBag.TotalPages)
+                                        {
+                                            <li>
+                                                <a href="@Url.Action("Index", new { page = ViewBag.CurrentPage + 1 })" class="Next">
+                                                    Next <i class="fa fa-chevron-right"></i>
+                                                </a>
+                                            </li>
+                                        }
                                     </ul>
                                 </div>
                             </div>
                         </div>
+
                     </div>
                 </div>
                 <!-- shop-products-wrapper end -->
