--- a/simple-ecommerce/Views/Home/Index.cshtml
+++ b/simple-ecommerce/Views/Home/Index.cshtml
@@ -56,7 +56,7 @@
                                             <!-- single-product-wrap start -->
                                             <div class="single-product-wrap">
                                                 <div class="product-image">
-                                                    <a href="single-product.html">
+                                                    <a href="/Home/ProductDetails?id=@item.Id">
                                                         <img src="/images/product/large-size/1.jpg" alt="Li's Product Image">
                                                     </a>
                                                     <span class="sticker">New</span>
@@ -64,9 +64,9 @@
                                                 <div class="product_desc">
                                                     <div class="product_desc_info">
                                                         <div class="product-review">
-                                                            <h5 class="manufacturer">
+                                                            @* <h5 class="manufacturer">
                                                                 <a href="/Home/ProductDetails?id=@item.Id">Category Name</a>
-                                                            </h5>
+                                                            </h5> *@
                                                             <div class="rating-box">
                                                                 <ul class="rating">
                                                                     <li><i class="fa fa-star-o"></i></li>
@@ -104,7 +104,7 @@
                                         <div class="row product-layout-list">
                                             <div class="col-lg-3 col-md-5 ">
                                                 <div class="product-image">
-                                                    <a href="single-product.html">
+                                                    <a href="/Home/ProductDetails?id=@item.Id">
                                                         <img src="images/product/large-size/12.jpg" alt="Li's Product Image">
                                                     </a>
                                                     <span class="sticker">New</span>
@@ -114,9 +114,9 @@
                                                 <div class="product_desc">
                                                     <div class="product_desc_info">
                                                         <div class="product-review">
-                                                            <h5 class="manufacturer">
+                                                            @* <h5 class="manufacturer">
                                                                 <a href="/Home/ProductDetails?id=@item.Id">Category Name</a>
-                                                            </h5>
+                                                            </h5> *@
                                                             <div class="rating-box">
                                                                 <ul class="rating">
                                                                     <li><i class="fa fa-star-o"></i></li>
