--- a/simple-ecommerce/Views/Home/Index.cshtml
+++ b/simple-ecommerce/Views/Home/Index.cshtml
@@ -69,7 +69,7 @@
                                                             @* <h5 class="manufacturer">
                                                                 <a href="/Home/ProductDetails?id=@item.Id">Category Name</a>
                                                             </h5> *@
-                                                            <div class="rating-box">
+                                                            @* <div class="rating-box">
                                                                 <ul class="rating">
                                                                     <li><i class="fa fa-star-o"></i></li>
                                                                     <li><i class="fa fa-star-o"></i></li>
@@ -77,7 +77,7 @@
                                                                     <li class="no-star"><i class="fa fa-star-o"></i></li>
                                                                     <li class="no-star"><i class="fa fa-star-o"></i></li>
                                                                 </ul>
-                                                            </div>
+                                                            </div> *@
                                                         </div>
                                                         <h4><a class="product_name" href="/Home/ProductDetails?id=@item.Id">@item.Name</a></h4>
                                                         <div class="price-box">
@@ -119,7 +119,7 @@
                                                             @* <h5 class="manufacturer">
                                                                 <a href="/Home/ProductDetails?id=@item.Id">Category Name</a>
                                                             </h5> *@
-                                                            <div class="rating-box">
+                                                            @* <div class="rating-box">
                                                                 <ul class="rating">
                                                                     <li><i class="fa fa-star-o"></i></li>
                                                                     <li><i class="fa fa-star-o"></i></li>
@@ -127,7 +127,7 @@
                                                                     <li class="no-star"><i class="fa fa-star-o"></i></li>
                                                                     <li class="no-star"><i class="fa fa-star-o"></i></li>
                                                                 </ul>
-                                                            </div>
+                                                            </div> *@
                                                         </div>
                                                         <h4><a class="product_name" href="/Home/ProductDetails?id=@item.Id">@item.Name</a></h4>
                                                         <div class="price-box">
