--- a/simple-ecommerce/Views/Home/ProductDetails.cshtml
+++ b/simple-ecommerce/Views/Home/ProductDetails.cshtml
@@ -1,5 +1,5 @@
 ﻿@using ECommerce.Application.DTOs
-@model ProductDetailsVM
+@model ProductDto
 <!-- content-wraper start -->
 <div class="content-wraper">
     <div class="container">
@@ -21,12 +21,12 @@
             <div class="col-lg-7 col-md-6">
                 <div class="product-details-view-content pt-60">
                     <div class="product-info">
-                        <h2>@Model.Product.Name</h2>
+                        <h2>@Model.Name</h2>
                         <span class="product-details-ref">Reference: demo_15</span>
-                        <div class="rating-box pt-20">
+                       @*  <div class="rating-box pt-20">
                             @if (User.Identity.IsAuthenticated)
                             {
-                                <ul class="rating user-rating" data-product-id="@Model.Product.Id">
+                                <ul class="rating user-rating" data-product-id="@Model.Id">
                                     @for (int i = 1; i <= 5; i++)
                                     {
                                         <li data-value="@i">
@@ -54,9 +54,9 @@
                                     <small>(@Model.TotalRatings ratings)</small>
                                 </div>
                             }
-                        </div>
+                        </div> *@
                         <div class="price-box pt-20">
-                            <span class="new-price new-price-2">$@Model.Product.Price</span>
+                            <span class="new-price new-price-2">$@Model.Price</span>
                         </div>
                         <div class="product-desc">
                             <p>
@@ -68,7 +68,7 @@
 
                         <div class="single-add-to-cart">
                             <div class="cart-quantity" style="margin-bottom:10px;">
-                                <button style="cursor:pointer" class="add-to-cart" data-id="@Model.Product.Id" data-name="@Model.Product.Name" data-price="@Model.Product.Price">Add to cart</button>
+                                <button style="cursor:pointer" class="add-to-cart" data-id="@Model.Id" data-name="@Model.Name" data-price="@Model.Price">Add to cart</button>
                             </div>
                         </div>
 
